packages/yew-macro/tests/html_macro/block-fail.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> tests/html_macro/block-fail.rs:6:15
  |
6 |             { () }
  |               ^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required because of the requirements on the impl of `ToString` for `()`
  = note: required because of the requirements on the impl of `From<()>` for `VNode`
  = note: required because of the requirements on the impl of `Into<VNode>` for `()`
  = note: 2 redundant requirements hidden
  = note: required because of the requirements on the impl of `Into<NodeSeq<(), VNode>>` for `()`
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> tests/html_macro/block-fail.rs:12:16
   |
12 |         <div>{ not_tree() }</div>
   |                ^^^^^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `ToString` for `()`
   = note: required because of the requirements on the impl of `From<()>` for `VNode`
   = note: required because of the requirements on the impl of `Into<VNode>` for `()`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `Into<NodeSeq<(), VNode>>` for `()`
   = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> tests/html_macro/block-fail.rs:15:17
   |
15 |         <>{ for (0..3).map(|_| not_tree()) }</>
   |                 ^^^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `ToString` for `()`
   = note: required because of the requirements on the impl of `From<()>` for `VNode`
   = note: required because of the requirements on the impl of `Into<VNode>` for `()`
note: required by a bound in `into_node_iter`
  --> $WORKSPACE/packages/yew/src/utils/mod.rs
   |
   |     T: Into<R>,
   |        ^^^^^^^ required by this bound in `into_node_iter`
